--- a/src/app/historique/historique.component.html
+++ b/src/app/historique/historique.component.html
@@ -24,7 +24,7 @@
                     <input style="box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);" type="date" class="form-control" [(ngModel)]="dateFin" name="dateFin" id="iddateFin">
                   </div>
                   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 ">
-                      <button style="box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);" class="btn btn-primary" (click)="Rechercher(dateDebut,dateFin)"><i class="fa fa-search"></i></button>
+                      <button style="box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);" class="btn btn-primary" (click)="Recherhce(dateDebut,dateFin)"><i class="fa fa-search"></i></button>
                   </div>
               </div>
             </div>
