--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
       <div class="container-fluid ">
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 " style="border: 1px dashed blue;">
-            <div class="row" [ngClass]=' changeThem()'  style="margin-bottom: 2rem;margin-left: 0rem;margin-right: 0rem;background-color: white;margin-top: 1rem;padding: 0;   word-wrap: break-word;
+          <div class="row" [ngClass]=' changeThem()'  style="margin-bottom: 2rem;margin-left: 0rem;margin-right: 0rem;background-color: white;margin-top: 1rem;padding: 0;   word-wrap: break-word;
             background-color: #fff;
             background-clip: border-box;
             border: 1px solid rgba(0,0,0,.125);
@@ -35,7 +35,30 @@
             </div>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6" style="border: 1px dashed blue;">  
-          <button class="btn btn-primary" (click)="openModal(template)" style="float: right;margin-right: 1rem;margin-top: 1rem">Suivi</button>
+            <div class="row" [ngClass]=' changeThem()'  style="margin-bottom: 1rem;margin-left: 0rem;margin-right: 0rem;background-color: white;margin-top: 1rem;padding: 0;   word-wrap: break-word;
+            background-color: #fff;
+            background-clip: border-box;
+            border: 1px solid rgba(0,0,0,.125);
+            border-radius: .25rem;">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 ">
+                  <label  class="control-label" for="dateJour">Date par jour</label>
+                  <div class="row">
+                  <input  type="date" id="datejour" style="width: 9rem;margin-left: 5px" name="datejour" [(ngModel)]="selectionjourLocalite" />
+                    <i  class="btn btn-primary fa fa-search" style="margin-left: 0.5rem" (click)="rechercherLocalite()" ></i>
+                  </div>
+                </div>
+                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 " >
+                  <label  class="control-label">Date par intervalle</label>
+                  <div class="row" >
+                      <input  name="intervalledateinit" style="width: 9rem"  type="date" [(ngModel)]="intervalledateinit" >
+                        <span  [ngClass]=' changeThem()'>à</span> 
+                      <input name="intervalleddatefinal" style="margin-left: 0.5rem; margin-right: 1rem" type="date" [(ngModel)]="intervalleddatefinal">
+                      
+                      <i  class="btn btn-primary fa fa-search" type="button" (click)="rechercheIntervalle()" ></i>
+                  </div>
+                </div>
+              </div>
+          <button class="btn btn-primary" (click)="openModal(template)" style="float: right;margin-right: 0rem;margin-top: 0rem">Suivi kiosque</button>
             <div   id="chart" class="col-12" style=" margin-top: 6rem; " >
               <div  [ngClass]=' changeThem()' style="
               border: 1px solid rgba(0,0,0,.125);
@@ -98,3 +121,14 @@
    </div>
 </div>
 </ng-template>
+<div *ngIf="loader">
+<div style="position: absolute ; left: 5%; top:11%; min-width: 100rem ; min-height: 40rem ;text-align: -webkit-center; padding-top: 10%; z-index:1000; background-color: white; opacity: 0.4;">
+    <div class="loader">
+      <div class="ball-pulse">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
+  </div>
+</div>
