--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -50,11 +50,11 @@
                 <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 " >
                   <label  class="control-label">Date par intervalle</label>
                   <div class="row" >
-                      <input  name="intervalledateinit" style="width: 9rem"  type="date" [(ngModel)]="intervalledateinit" >
+                      <input  name="intervalledateinit" style="width: 9rem"  type="date" [(ngModel)]="intervalledateinitLocaliter" >
                         <span  [ngClass]=' changeThem()'>à</span> 
-                      <input name="intervalleddatefinal" style="margin-left: 0.5rem; margin-right: 1rem" type="date" [(ngModel)]="intervalleddatefinal">
+                      <input name="intervalleddatefinal" style="margin-left: 0.5rem; margin-right: 1rem" type="date" [(ngModel)]="intervalleddatefinalLocaliter">
                       
-                      <i  class="btn btn-primary fa fa-search" type="button" (click)="rechercheIntervalle()" ></i>
+                      <i  class="btn btn-primary fa fa-search" type="button" (click)="rechercheIntervalleLocaliter()" ></i>
                   </div>
                 </div>
               </div>
@@ -74,31 +74,60 @@
     </div>
 </div>
 
-<ng-template #template >
+<ng-template #template  >
   <div class="modal-header">
     <h4 class="modal-title pull-left">Suivi des agents</h4>
     <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
-  <div class="modal-body">
-    <input type="text" name="recherche" id="idRecheche" [(ngModel)]="inputRecherche" >
-    <i  class="btn btn-primary fa fa-search" style="margin-left: 0.5rem" (click)="suiviAgnet()" ></i>
-    <table class="table table-striped">
+  <div class="modal-body" style="height: auto;min-width: 100%;">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="margin-top: 0rem;">
+      <div class="row">
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 ">
+          <label for="">Numéro</label>
+          <div >
+            <div >
+              <input style="box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);" type="text" class="form-control" name="recherche" id="idRecheche" [(ngModel)]="inputRecherche" >
+            </div>
+          </div>
+
+        </div>
+        <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 ">
+            <label for="">Date par intervalle</label>
+            <div class="row">
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 ">
+                  <input  style="box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);" name="intervalledateinit" class="form-control"  type="date" [(ngModel)]="intervalledateinitKiosque" >
+                </div>
+                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 ">
+                <input style="box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);" name="intervalleddatefinal" class="form-control" type="date" [(ngModel)]="intervalleddatefinalKiosque">
+               </div>
+
+               <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+                  <i  class="btn btn-primary fa fa-search" style="margin-left: 0.5rem" (click)="suiviAgnet()" ></i>
+               </div>
+            </div>
+          </div>
+
+      </div>
+
+    </div>
+   
+    <table class="table table-striped" style="margin-top: 1rem;">
         <thead >
             <tr>
               <th scope="col">Telephone</th>
-              <th scope="col">Nom</th>
-              <th scope="col">Prenom</th>
+              <th scope="col">Localité</th>
+              <th scope="col">Adresse</th>
               <th scope="col">Suivre</th>
             </tr>
           </thead>
           <tbody>
             <!--| filterBy: ['dateEnregistremet','client']: filtre-->
           <tr *ngFor="let l of listRechecher ; let i=index">
-              <td > {{l.telephone}} </td>
-              <td >{{l.nom}}</td>
-              <td >{{l.prenom}}</td>
+              <td > {{l.USSD}} </td>
+              <td >{{l.adresse}}</td>
+              <td >{{l.kiosque}}</td>
               <td ><i class="fa fa-address-card" (click)="evolutionBi(i)"  style="font-size:25px;color: midnightblue"></i></td>
             </tbody>
       </table>
@@ -120,6 +149,17 @@
       <canvas  id="myChart3" width="680px" height="400" ></canvas>
    </div>
 </div>
+<div *ngIf="loader1">
+    <div style="position: absolute ; left: 5%; top:11%; min-width: 100rem ; min-height: 40rem ;text-align: -webkit-center; padding-top: 10%; z-index:1000; background-color: white; opacity: 0.4;">
+        <div class="loader">
+          <div class="ball-pulse">
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+        </div>
+      </div>
+    </div>
 </ng-template>
 <div *ngIf="loader">
 <div style="position: absolute ; left: 5%; top:11%; min-width: 100rem ; min-height: 40rem ;text-align: -webkit-center; padding-top: 10%; z-index:1000; background-color: white; opacity: 0.4;">
